@@ -1,3 +1,8 @@
+Mon Mar 21 15:42:06 2005  George Lebl <jirka@5z.com>
+
+	* src/mpwrap.c: some allocation fixes, the float formatting is
+	  incredibly evil!
+
 Mon Mar 21 14:48:28 2005  George Lebl <jirka@5z.com>
 
 	* src/genius.c, src/gnome-genius.c: set default precision to 128
